src/snapshots/rv__configure__tests__configure_add_force_source.snap
---
source: src/configure.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    {alias = "posit", url = "https://packagemanager.posit.co/cran/2024-12-16/"},
    { alias = "bioc", url = "https://bioconductor.org/packages/3.18/bioc", force_source = true },
]
dependencies = [
    "dplyr",
]
