src/snapshots/rv__configure__tests__configure_replace_force_source.snap
---
source: src/configure.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    { alias = "bioc", url = "https://bioconductor.org/packages/3.18/bioc", force_source = true }
]
dependencies = [
    "dplyr",
]
