src/snapshots/rv__configure__tests__configure_replace_same_alias.snap
---
source: src/configure.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    { alias = "posit", url = "https://packagemanager.posit.co/cran/2024-12-01" }
]
dependencies = [
    "dplyr",
]
