src/snapshots/rv__configure__tests__configure_update_by_url.snap
---
source: src/configure.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    { alias = "posit-matched-by-url", url = "https://packagemanager.posit.co/cran/2024-12-16/", force_source = true }
]
dependencies = [
    "dplyr",
]
